@@ -3,6 +3,8 @@ Revision history for Perl extension AnyEvent.
 3.51
 	- added (experimental) AnyEvent::DNS module.
         - added (experimental) AnyEvent::Socket module.
+        - support more of the POSIX forms instead of a pure dooted quad for
+          verbatim ip addresses.
         - AnyEvent::Socket::inet_aton will use AnyEvent::DNS now and not fork anymore.
 	- try very hard not to freeze on broken windows perls.
         - make on_eof optional in AnyEvent::Handle.
